--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "smartbid-compliance",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module", 
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "start": "node server.js"   
   },
   "dependencies": {
+    "cors": "^2.8.5",             
+    "dotenv": "^16.4.5",          
+    "express": "^4.19.2",         
+    "node-fetch": "^3.3.2",       
+    "firebase": "^10.12.0",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.275.0",
-    "firebase": "^10.10.0",
-    "pdfjs-dist": "^3.4.120",
-    "mammoth": "^1.4.15",
-    "tailwindcss": "^3.4.17"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.2.0"
   }
 }
